--- a/auth/composer.json
+++ b/auth/composer.json
@@ -2,7 +2,10 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
@@ -22,7 +25,10 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
+            "App\\": [
+                "app/",
+                "src"
+            ],
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
